fixed alignments

--- a/resultPage/resultPage.css
+++ b/resultPage/resultPage.css
@@ -12,6 +12,7 @@ body {
 .result_page {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 30px;
   padding: 30px 60px;
   color: #fafbfd;
@@ -20,6 +21,7 @@ body {
 .result_page-content {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -51,12 +53,12 @@ body {
   justify-content: center;
   align-items: center;
   line-height: 2.3rem;
+  margin: 30px 0px 60px 0px;
 }
 
 .container_left,
-.container_middle,
 .container_right {
-  padding: 35px;
+  width: 200px;
 }
 
 .progress-bar {
